# FlowDelta

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
examples/: integration_example.py
examples/sample_app/: ecommerce.js  ecommerce.py  run_flows.py
flowdelta/: __init__.py
src/: __init__.py  llm_utils.py  orchestrator.py  sdk.py
src/delta_engine/: __init__.py  delta_store.py  sqlite_query.py  state_diff.py
src/flow_identifier/: __init__.py  ast_analyzer.py  call_graph.py  llm_flow_mapper.py
src/multi_lang/: __init__.py  _base_launcher.py  ast_base.py  csharp_ast.py  csharp_launcher.py  dap_normalize.py  java_ast.py  java_launcher.py
src/observability/: __init__.py  dashboard.py  otel_exporter.py  trend_chart.py
src/state_tracker/: __init__.py  _framed_transport.py  dap_client.py  dap_launcher.py  lsp_annotator.py  lsp_client.py  trace_recorder.py
src/test_generator/: __init__.py  assertion_gen.py  hypothesis_gen.py  invariant_detector.py  llm_test_writer.py  mutation_runner.py  test_renderer.py
templates/: test_module.py.j2  test_module_selenium.py.j2
tests/: conftest.py  helpers.py  test_assertion_gen.py  test_ast_analyzer.py  test_dap_launcher.py  test_delta_engine.py  test_js_flow.py  test_lsp_annotator.py  test_sprint3.py  test_sprint4.py  test_sqlite_query.py
