[project]
name = "flowdelta"
version = "0.1.0"
description = "AI-powered application flow identification and delta-based automated test generation"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "openai>=1.0.0",
    "deepdiff>=6.7.0",
    "debugpy>=1.8.0",
    "pygls>=1.3.0",
    "networkx>=3.3",
    "pyyaml>=6.0.1",
    "dataclasses-json>=0.6.4",
    "jinja2>=3.1.4",
    "pytest>=8.2.0",
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.scripts]
flowdelta = "src.orchestrator:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
testpaths = ["tests"]
