[project]
name = "flowdelta"
version = "0.1.0"
description = "AI-powered application flow identification and delta-based automated test generation"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "openai>=1.0.0",
    "deepdiff>=6.7.0",
    "debugpy>=1.8.0",
    "pygls>=1.3.0",
    "networkx>=3.3",
    "pyyaml>=6.0.1",
    "dataclasses-json>=0.6.4",
    "jinja2>=3.1.4",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.24.0",
    "anyio>=4.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    # Sprint 3
    "hypothesis>=6.100.0",
    "mutmut>=2.4.4",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
]
otel = [
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
]
selenium = [
    "selenium>=4.0.0",
    "pytest-html>=4.0.0",
]
dev = [
    "pytest>=8.2.0",
    "hypothesis>=6.100.0",
    "mutmut>=2.4.4",
    "httpx>=0.27.0",
]
all = [
    "flowdelta[dashboard,otel,selenium,dev]",
]

[project.scripts]
flowdelta = "src.orchestrator:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "flowdelta*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
